# Harkaam

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: agents.md  architecture_summaries.txt  memory.md  tools.md  workflows.md
examples/: all_arch.py  bdi_example.py  lat_example.py  mixed_architecture_example.py  ooda_example.py  raise_example.py  react_example.py  rewoo_example.py  setup_api_keys.py
harkaam/: __init__.py
harkaam/agents/: __init__.py  base.py  bdi.py  lat.py  ooda.py  raise_agent.py  react.py  rewoo.py
harkaam/core/: __init__.py  llm.py  memory.py  parser.py  prompt.py  tools.py
harkaam/system/: __init__.py  workflow.py
harkaam/utils/: __init__.py  config.py
