[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harkaam"
version = "0.1.0"
description = "A modular framework for building agent-based systems with multiple agent architectures"
readme = "README.md"
authors = [
    {name = "Muhammad Faizan", email = "faizanwn102@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "requests>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/faizanwasif/harkaam"
"Bug Tracker" = "https://github.com/yourusername/harkaam/issues"